Bug 436264 - "New Tab" menu item does nothing when only one profile exists
Summary: "New Tab" menu item does nothing when only one profile exists
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.2
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: triaged, usability
: 449757 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-27 13:42 UTC by q1253328221
Modified: 2022-02-07 22:28 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description q1253328221 2021-04-27 13:42:23 UTC
When there are profiles created by user, float the mouse on the "New Tap" button, and konsole'll display the list of profiles. The user can specify one to create new tap with.
When there's no profile except the default, float the mouse on the "New Tap" button, and konsole displays nothing. Then the user can't create new tap. (though Ctrl+Shift+T still works)
Comment 1 Paul Worrall 2021-06-17 10:22:45 UTC
I can reproduce this using the "File=>New Tab" menu item.  The "New Tab" button on the main toolbar works OK.

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.1
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.4.0-74-generic (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 2 groot 2021-07-02 23:40:12 UTC
Can confirm as well:

- start konsole
- ensure there is just **one** profile (e.g. "Default [read-only]" with a new user)

## Toolbar button

- enable the toolbar, if it's hidden (Settings -> Toolsbars Shown -> Main Toolbar)
- **long** press the "new tab" button; this would (with more than one profile) cause the menu to open, showing all of the profiles
- instead, the button is highlighted, as if the menu is open; clicking on the button now does nothing
- as Paul Worrall mentions, just clicking (not long-clicking) on "new tab" button works ok

## File Menu

- click File, then hover over New Tab> menu item
- normally, this would cause the sub-menu to open, showing all of the prtofiles
- instead, nothing happens at all (because there's just one profile)
Comment 3 Bug Janitor Service 2021-09-04 19:54:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/474
Comment 4 nsprangers@gmail.com 2021-09-04 20:04:05 UTC
Submitted the above merge request.

A better fix would be for the "File > New Tab" menu item to become clickable when there is only one profile.
Comment 5 nsprangers@gmail.com 2021-09-05 19:53:06 UTC
Git commit fed1a9d2cf9a9d6f4c0207068b43f7788b8515ea by Nathan Sprangers.
Committed on 05/09/2021 at 19:49.
Pushed by ahmadsamir into branch 'master'.

Fix missing new-tab menu when only one profile exists

Sub-menu will always be displayed in "File>New Tab" and "New Tab" button,
even if there is only one profile to display (the built-in default).

This fixes not being able to create a new tab from "File>New Tab" menu and
long-pressing on the new tab toolbar button.

M  +16   -39   src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/commit/fed1a9d2cf9a9d6f4c0207068b43f7788b8515ea
Comment 6 Nate Graham 2022-02-07 22:28:25 UTC
*** Bug 449757 has been marked as a duplicate of this bug. ***