Fix missing new-tab menu when only one profile exists

Sub-menu will always be displayed in "File>New Tab" and "New Tab" button,
even if there is only one profile to display (the built-in default).

This fixes not being able to create a new tab from "File>New Tab" menu and
long-pressing on the new tab toolbar button.

BUG: 436264